// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductInfo ProductInfo renders correctly 1`] = `
.c8 {
  top: -.3em;
  left: .1em;
}

.c10 {
  color: #8f9598;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 6pt;
}

.c11 span {
  color: #FFF;
  background: rgb(232,32,32);
  background: linear-gradient(90deg,rgba(232,32,32,1) 0%,#f5471e 100%);
  padding: 2pt 2pt 2pt 0;
  border-top-right-radius: 2pt;
  border-bottom-right-radius: 2pt;
  font-size: 0.8rem;
  margin-left: -6pt;
  z-index: 1001;
}

.c11:before {
  z-index: 1000;
  content: ' ';
  width: 12.3pt;
  height: 12.3pt;
  background: rgb(232,32,32);
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  border-bottom-left-radius: 2pt;
}

.c0 {
  padding: 12pt;
  background-color: #FFF;
  border-top: 1px solid #eef1f3;
  margin-bottom: 8pt;
}

.c1 {
  font-size: 17pt;
  color: #262829;
}

.c4 {
  color: #1e75f6;
}

.c3 {
  color: #8f9598;
}

.c5 {
  background-color: rgb(238,241,243);
  color: #8f9598;
  font-size: 12pt;
  padding: 3pt 8pt;
  border-radius: 8pt;
}

.c2 {
  margin-bottom: 8pt;
}

.c6 {
  margin-top: 8pt;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  font-size: 17pt;
  font-weight: 700;
  color: #ea341f;
  margin-bottom: 0;
}

.c9 {
  width: 8pt;
}

<div
  className="c0"
>
  <h3
    className="c1"
  >
    Máy tính để bàn - PC Acer AS XC-885 (i5-8400/4GB/1TB HDD/UHD 630/Endless)
  </h3>
  <div
    className="c2"
  >
    <span
      className="c3"
    >
      Mã SP: 
    </span>
    <span
      className="c4"
    >
      1807564
    </span>
  </div>
  <div>
    <span
      className="c5"
    >
      Ngừng kinh doanh
    </span>
  </div>
  <div
    className="c6"
  >
    <h3
      className="c7"
    >
      11.890.000
      <sup
        className="c8"
      >
        đ
      </sup>
    </h3>
    <span
      className="c9"
    />
    <span
      className="c10"
    >
      11.890.000
    </span>
    <span
      className="c9"
    />
    <div
      className="c11"
    >
      <span>
        -
        58
        %
      </span>
    </div>
  </div>
</div>
`;

exports[`ProductInfo ProductInfo renders correctly when sale status is not valid 1`] = `
.c8 {
  top: -.3em;
  left: .1em;
}

.c10 {
  color: #8f9598;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 6pt;
}

.c11 span {
  color: #FFF;
  background: rgb(232,32,32);
  background: linear-gradient(90deg,rgba(232,32,32,1) 0%,#f5471e 100%);
  padding: 2pt 2pt 2pt 0;
  border-top-right-radius: 2pt;
  border-bottom-right-radius: 2pt;
  font-size: 0.8rem;
  margin-left: -6pt;
  z-index: 1001;
}

.c11:before {
  z-index: 1000;
  content: ' ';
  width: 12.3pt;
  height: 12.3pt;
  background: rgb(232,32,32);
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  border-bottom-left-radius: 2pt;
}

.c0 {
  padding: 12pt;
  background-color: #FFF;
  border-top: 1px solid #eef1f3;
  margin-bottom: 8pt;
}

.c1 {
  font-size: 17pt;
  color: #262829;
}

.c4 {
  color: #1e75f6;
}

.c3 {
  color: #8f9598;
}

.c5 {
  background-color: rgb(238,241,243);
  color: #8f9598;
  font-size: 12pt;
  padding: 3pt 8pt;
  border-radius: 8pt;
}

.c2 {
  margin-bottom: 8pt;
}

.c6 {
  margin-top: 8pt;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  font-size: 17pt;
  font-weight: 700;
  color: #ea341f;
  margin-bottom: 0;
}

.c9 {
  width: 8pt;
}

<div
  className="c0"
>
  <h3
    className="c1"
  >
    Máy tính để bàn - PC Acer AS XC-885 (i5-8400/4GB/1TB HDD/UHD 630/Endless)
  </h3>
  <div
    className="c2"
  >
    <span
      className="c3"
    >
      Mã SP: 
    </span>
    <span
      className="c4"
    >
      1807564
    </span>
  </div>
  <div>
    <span
      className="c5"
    >
      invalid_status
    </span>
  </div>
  <div
    className="c6"
  >
    <h3
      className="c7"
    >
      11.890.000
      <sup
        className="c8"
      >
        đ
      </sup>
    </h3>
    <span
      className="c9"
    />
    <span
      className="c10"
    >
      11.890.000
    </span>
    <span
      className="c9"
    />
    <div
      className="c11"
    >
      <span>
        -
        58
        %
      </span>
    </div>
  </div>
</div>
`;

exports[`ProductInfo ProductInfo renders correctly when there are no promotion 1`] = `
.c8 {
  top: -.3em;
  left: .1em;
}

.c0 {
  padding: 12pt;
  background-color: #FFF;
  border-top: 1px solid #eef1f3;
  margin-bottom: 8pt;
}

.c1 {
  font-size: 17pt;
  color: #262829;
}

.c4 {
  color: #1e75f6;
}

.c3 {
  color: #8f9598;
}

.c5 {
  background-color: rgb(238,241,243);
  color: #8f9598;
  font-size: 12pt;
  padding: 3pt 8pt;
  border-radius: 8pt;
}

.c2 {
  margin-bottom: 8pt;
}

.c6 {
  margin-top: 8pt;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  font-size: 17pt;
  font-weight: 700;
  color: #ea341f;
  margin-bottom: 0;
}

<div
  className="c0"
>
  <h3
    className="c1"
  >
    Máy tính để bàn - PC Acer AS XC-885 (i5-8400/4GB/1TB HDD/UHD 630/Endless)
  </h3>
  <div
    className="c2"
  >
    <span
      className="c3"
    >
      Mã SP: 
    </span>
    <span
      className="c4"
    >
      1807564
    </span>
  </div>
  <div>
    <span
      className="c5"
    >
      Ngừng kinh doanh
    </span>
  </div>
  <div
    className="c6"
  >
    <h3
      className="c7"
    >
      11.890.000
      <sup
        className="c8"
      >
        đ
      </sup>
    </h3>
  </div>
</div>
`;
